--- a/bloki.html
+++ b/bloki.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="bloki.css">
+    <link rel="stylesheet" href="navbar.css">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
@@ -24,7 +25,11 @@
 </div>
 -->
 <div class="kontainer animate__animated animate__zoomInLeft">
-    <div class="keader"> Header </div>
+    <div class="keader">
+        <a class="link">Page 1</a>
+        <a class="link">Page 2</a>
+        <a class="link">Page 3</a>
+    </div>
     <div class="kidebar"> Sidebar </div>
     <div class="kain-content"> Main Content
         <div class="ladja">
