--- a/bloki.html
+++ b/bloki.html
@@ -20,7 +20,10 @@
             <a class="link">Page 2</a>
             <a class="link">Page 3</a>
         </div>
-        
+        <div class="quote-container">
+            <p class="quote">"Kids are fat because of lack of parenting."</p>
+            <p class="author">- Ben Shapiro</p>
+        </div>
         <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none">
             <defs>
               <linearGradient id="wave-gradient" gradientTransform="rotate(90)">
