--- a/bloki.html
+++ b/bloki.html
@@ -21,9 +21,7 @@
 <body>
     <section class="page page-1">
         <div class="our-navbar">
-            <a class="link">Page 1</a>
-            <a class="link">Page 2</a>
-            <a class="link">Page 3</a>
+
         </div>
 
         <div class="rain-container">
@@ -32,8 +30,8 @@
         </div>
 
         <div class="quote-container">
-            <p class="quote">"Kids are fat because of lack of parenting."</p>
-            <p class="author">- Ben Shapiro</p>
+            <p class="quote">“By polluting the oceans, not mitigating CO2 emissions and destroying our biodiversity, we are killing our planet. Let us face it, there is no planet B.”</p>
+            <p class="author">- Emmanuel Macron</p>
         </div>
         <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 24 150 28" preserveAspectRatio="none">
             <defs>
@@ -127,6 +125,12 @@
 
         <div class="rightBuffer"></div>
     </section>
+
+    <audio autoplay>
+        <source src=
+                        "Waves-sound-effect.mp3"
+                type="audio/mp3">
+    </audio>
 </body>
 
 <script>
